--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P O R T F O L I O</title>
 <link rel="icon" href="images/2734364.png">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
  </head>
 
  
