--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
 
                 <div class="navbar">
                     <div class="uppernav">
-                    <div id="hamburger" class="hamburger" >
+                         <div id="menuToggle">
+                            <input type="checkbox" />
+                            <span id="span1"></span>
+                            <span id="span2"></span>
+                            <span id="span3"></span>
+                        </div>
+                    <!-- <div id="hamburger" class="hamburger" >
                         <input type="button">
                                 <span></span>
                                 <span></span>
                                 <span></span>
                           
-                    </div>
+                    </div> -->
                        
                         <img id="searchbar-cta" class="search-box" src="images/search-2-5123.png" height="18px" width="18px" alt="abc">
                     </div>
